@@ -19,6 +19,8 @@ Noteworthy changes in version 2.2.42 (unreleased)
 
   * gpgsm: Support ECC certificates.  [T6253]
 
+  * gpg: Make progress work for large files on Windows.  [T6534]
+
   * gpgsm: Also announce AES256-CBC in signatures.  [rGaa397fdcdb21]
 
   Release-info: https://dev.gnupg.org/T6307
